src/sections/Skills/SkillsStyles.module.css
.container {
    display: flex;
    flex-direction: column;
    text-align: center;

    span {
        display: flex;
        align-items: center;
        gap: 5px;
    }

}



.skillIconContainer {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 20px;
    margin-top: 10px;
    transition: transform 300ms ease-in-out;
}

.skillBox {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.skillIcon {
    height: 50px;
    transition: transform 0.15s ease;
}

.skillName {
    color: #777;
    font-family: 'Roboto mono';
    font-size: 11px;
    opacity: 0;
    transition: opacity 0.2s ease;
    width: fit-content;
}

.skillIcon:hover {
    transform: translateY(-4px);
}

.skillIcon:hover+.skillName {
    opacity: 1;
}



hr {
    width: 100px;
    height: 1px;
    border: none;
    background-color: var(--text-color);
    margin: 30px auto;
}

@media (width>=800px) {
    hr {
        width: 300px;
    }
}

